# youtube-transcript

./: .gitignore  AGENTS.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
skills/youtube-transcript/: SKILL.md
skills/youtube-transcript/agents/: openai.yaml
src/youtube_transcript/: __init__.py  captions.py  cli.py  errors.py  output.py  ytdlp.py
tests/: test_captions.py  test_cli.py  test_ytdlp.py
tests/fixtures/: sample.json3
