[project]
name = "youtube-transcript"
version = "0.1.0"
description = "Fast YouTube transcript CLI for agents using yt-dlp captions first, with auditable JSON and Markdown outputs."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Hanif Carroll" }]
keywords = ["agents", "captions", "transcripts", "youtube", "yt-dlp"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Multimedia :: Video",
  "Topic :: Text Processing",
  "Topic :: Utilities",
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.8",
]

[project.scripts]
yt-transcript = "youtube_transcript.cli:main"

[project.urls]
Homepage = "https://github.com/HanifCarroll/youtube-transcript"
Repository = "https://github.com/HanifCarroll/youtube-transcript"
Issues = "https://github.com/HanifCarroll/youtube-transcript/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/youtube_transcript"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
